# sigaa-ufpa-mcp

./: .dockerignore  .env  .env.exemple  .gitignore  Dockerfile  README.md  catalogo_docker_sigaa_ufpa.yaml  docker-compose.yml  drive_service.py  fastmcp.json  mcp-client-config.json  mcp.json  pyproject.toml  server.py  sigaa-ufpa-mcp.yaml  sigaa_actor.py
utils/: pdf_extractor.py  sigaa_helpers.py
