[project]
name = "sigaa-ufpa-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "browser-use==0.8.1",
    "fastapi>=0.118.0",
    "fastmcp>=2.12.4",
    "loguru>=0.7.3",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
